|hello world|do you hear me ?|04/28/2014 08:40:18 am